--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,8 @@ events {
 http {
     default_type  application/octet-stream;
 
+    client_max_body_size 50M;
+
     sendfile        on;
 
     keepalive_timeout  65;
@@ -39,6 +41,13 @@ http {
     #     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     #     proxy_set_header   X-Forwarded-Proto $scheme;
     # }
+
+    location /_next/webpack-hmr {
+    proxy_pass http://localhost:3000/_next/webpack-hmr;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade"; 
+} 
 
     location /api/ {
         proxy_pass         http://localhost:5000;
